don't skip empty directories

AbstractFileManagerPluginPrivate::addJobItems() returned immediately
when called with an empty entries list, thus failing to do required
houskeeping. As a result the project manager would continue to show the
last file deleted from now empty directories.

BUG: 386648